k8s/ingress-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: recipelist-ingress-service
  annotations:
    kubernetes.io/ingress.class: 'public'

    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

    # Certificate config
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - recipelist.vandersangen.dev
      secretName: recipelist.vandersangen.dev

  rules:
    - host: recipelist.vandersangen.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: recipelist-cluster-ip
                port:
                  number: 80
